profilelist1exp/unpackaged/objects/S_P_Vendor_Product_Selection__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Product_Type__c</fullName>
        <label>Additional Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>SQL</fullName>
                </value>
                <value>
                    <fullName>Windows</fullName>
                </value>
                <value>
                    <fullName>Lync</fullName>
                </value>
                <value>
                    <fullName>SystemCenter</fullName>
                </value>
                <value>
                    <fullName>Forefront</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>VDI</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Visual Studio</fullName>
                </value>
                <value>
                    <fullName>BizTalk</fullName>
                </value>
                <value>
                    <fullName>Expression StudioWeb</fullName>
                </value>
                <value>
                    <fullName>Expression UltPro</fullName>
                </value>
                <value>
                    <fullName>App Fabric</fullName>
                </value>
                <value>
                    <fullName>Biztalk Server</fullName>
                </value>
                <value>
                    <fullName>Core Infrastructure Svr Suite</fullName>
                </value>
                <value>
                    <fullName>MSDN Platforms</fullName>
                </value>
                <value>
                    <fullName>SharePoint Svr</fullName>
                </value>
                <value>
                    <fullName>Azure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EA_Enterprise_Product__c</fullName>
        <label>EA Enterprise Product</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Enterprise Desktop w MDOP</fullName>
                </value>
                <value>
                    <fullName>Professional Desktop w MDOP</fullName>
                </value>
                <value>
                    <fullName>Enterprise Desktop</fullName>
                </value>
                <value>
                    <fullName>Professional Desktop</fullName>
                </value>
                <value>
                    <fullName>Win Pro</fullName>
                </value>
                <value>
                    <fullName>Core CAL</fullName>
                </value>
                <value>
                    <fullName>Office Professional Plus</fullName>
                </value>
                <value>
                    <fullName>Enterprise CAL</fullName>
                </value>
                <value>
                    <fullName>Core CAL Bridge for Office 365</fullName>
                </value>
                <value>
                    <fullName>ECAL Bridge for Office 365</fullName>
                </value>
                <value>
                    <fullName>Azure DataMarket</fullName>
                </value>
                <value>
                    <fullName>Azure Monetary Commitment</fullName>
                </value>
                <value>
                    <fullName>Desktop Optimization Pack for SA</fullName>
                </value>
                <value>
                    <fullName>Visual Studio Premium w/MSDN</fullName>
                </value>
                <value>
                    <fullName>Visual Studio Pro w/MSDN Prem</fullName>
                </value>
                <value>
                    <fullName>Visual Studio Pro w/MSDN Pro</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan A1</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan A2</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan A3</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan A4</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E1</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E1D</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E1D ITAR</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E2</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E2D</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E2D ITAR</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E3</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E3D</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E3D ITAR</fullName>
                </value>
                <value>
                    <fullName>Office 365 Plan E4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>New_Products_Only__c</fullName>
        <label>New Products Only</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Additional_Product_Type__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 128MB Ovrg 128MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 1GB Ovrg 1GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 256MB Ovrg 256MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 2GB Ovrg 2GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 4GB Ovrg 4GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG Fee MVL 512MB Ovrg 512MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 128MB Commit 128MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 1GB Commit 1GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 256MB Commit 256MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 2GB Commit 2GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 4GB Commit 4GB</fullName>
                </value>
                <value>
                    <fullName>AppFabricCache ShrdSvr ALNG SubsVL MVL 512MB Commit 512MB</fullName>
                </value>
                <value>
                    <fullName>AppFabricSrvcBus ShrdSvr ALNG Fee MVL 1000RlyHrs Ovrg</fullName>
                </value>
                <value>
                    <fullName>AppFabricSrvcBus ShrdSvr ALNG Fee MVL 1MMsgs Ovrg</fullName>
                </value>
                <value>
                    <fullName>AppFabricSrvcBus ShrdSvr ALNG SubsVL MVL 1000RlyHrs Commit</fullName>
                </value>
                <value>
                    <fullName>AppFabricSrvcBus ShrdSvr ALNG SubsVL MVL 1MMsgs Commit</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A0CloudSrvcs</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A0VM(Non-Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A0VM(Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A1VM(Non-Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A1VM(Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A5CloudSrvc</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A5VM(Non-Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A5VM(Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A6CloudSrvc</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A6VM(Non-Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A6VM(Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A7CloudSrvc</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A7VM(Non-Win)</fullName>
                </value>
                <value>
                    <fullName>AzureCompute ShrdSvr ALNG SubsVL MVL 100hrs Commit A7VM(Win)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remove__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remove</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIP_Fees__c</fullName>
        <label>SIP Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SIP_Incentive__c</fullName>
        <label>SIP Incentive</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIP_Threshold_Met__c</fullName>
        <label>SIP Threshold Met</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_P_Vendor_Additional_Information_ID__c</fullName>
        <label>S&amp;P Vendor Additional Information ID</label>
        <referenceTo>S_P_Vendor_Additional_Information__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor Product Selections</relationshipLabel>
        <relationshipName>S_P_Vendor_Product_Selection</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>S_P_Vendor_Product_Threshold__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>S&amp;P Vendor Product Threshold</label>
        <referenceTo>S_P_Vendor_Product_Threshold__c</referenceTo>
        <relationshipLabel>S&amp;P Vendor Product Selections</relationshipLabel>
        <relationshipName>S_P_Vendor_Product_Selections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EA</fullName>
                </value>
                <value>
                    <fullName>ECI</fullName>
                </value>
                <value>
                    <fullName>SIP</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>EAS</fullName>
                </value>
                <value>
                    <fullName>SCE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>S&amp;P Vendor Product Selection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>S_P_Vendor_Product_Threshold__c</columns>
        <columns>S_P_Vendor_Additional_Information_ID__c</columns>
        <columns>Type__c</columns>
        <columns>Unit_Price__c</columns>
        <columns>Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <displayFormat>SVPS # {000000000}</displayFormat>
        <label>S&amp;P Vendor Product Selection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>S&amp;P Vendor Product Selections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>